# stbox

./: .gitmodules  build.gradle  gradle.properties  gradlew.bat
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/net/xigang/ttand/stbox/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/textures/: 1280px-ASCII_full.ktx  cube_bcmp.ktx  ic_launcher-web.ktx
app/src/main/cpp/: Blob.hh  Connecter.cc  Connecter.hh  Device.cc  Device.hh  Instance.cc  Instance.hh  Job.cc  Job.hh  JobAabb.cc  JobBase.cc  JobBase.hh  JobDraw.cc  JobDraw.hh  JobDrawLine.cc  JobDrawLine.hh  JobFont.cc  JobFont.hh  JobIsland.cc  JobSkyBox.cc  JobSkyBox.hh  Jobdraw.cc  Jobdraw.hh  Net.hh  PipelineResource.hh  Window.cc  Window.hh  activation.cc  activation.hh  aopen.c  blob.cc  blob.hh  connect.cc  connect.hh  connecter.cc  connecter.hh  cube_data.hh  ktx2.cc  main.cc  main.hh  (+14 more)
app/src/main/cpp2/: Activation.cc  Blob.cc  JobDraw.cc  JobDrawLine.cc  JobFont.cc
app/src/main/include/: Activation.hh  Connecter.hh  Device.hh  Instance.hh  JobAabb.hh  JobBase.hh  JobDraw.hh  JobDrawLine.hh  JobFont.hh  JobIsland.hh  JobSkyBox.hh  PipelineResource.hh  Window.hh  aopen.h  ktx2.hh  model.hh  onnx.hh  ss.hh  stb_font_consolas_24_latin1.inl  stboxvk.hh  thread.hh  util.hh  vertexdata.hh  vulkan.hpp
app/src/main/java/net/xigang/ttand/stbox/: StboxActivity.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  styles.xml
app/src/main/shaders/: aabb.geom  aabbsBuildTree.comp  bline.comp  copy.frag  copy.vert  copy0.vert  copy1.vert  cube.geom  font.frag  font.vert  indir.frag  indir.vert  integrate.comp  mesh.frag  mesh.vert  mpr.comp  mvp.vert  mvpc.vert  passthrough.tesc  passthrough.tese  portal.geom  skybox.frag  skybox.vert  test.comp  updateAabbs.comp
app/src/main/shaders/cl_kernels/: activation.cl  auxiliary.cl  batch_norm.cl  batch_reindex.cl  benchmark.cl  bias.cl  bnll.cl  channel.cl  concat.cl  contrastive_loss.cl  conv_layer_spatial.cl  conv_spatial_helper.cl  crop.cl  dropout.cl  eltwise.cl  elu.cl  embed.cl  fft.cl  fillbuffer.cl  header.cl  im2col.cl  im2col_nd.cl  lrn.cl  lstm_unit.cl  math.cl  mergecrop.cl  pooling.cl  pooling_nd.cl  pooling_sk.cl  slice.cl  softmax_loss.cl  solvers.cl  tile.cl
app/src/proto/: CMakeLists.txt  model.cc  model.hh  model.proto
app/src/test/java/net/xigang/ttand/stbox/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
